kubernetes/flink-statefun-standalone/flink-ui/flink-master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: ""
    ingress.kubernetes.io/ssl-passthrough: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
  name: flinkmaster-k8s
  namespace: sda
spec:
  rules:
  - host: flinkmaster.192.168.159.8.nip.io
    http:
      paths:
      - backend:
          service:
            name: flink-statefun-master-rest
            port:
              number: 8081
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.159.8
